# Murrow

./: .gitignore  PLAN.md  README.md
pipeline/: README.md  pyproject.toml
pipeline/config/: events.toml  outlets.toml  pipeline.toml
pipeline/src/murrow/: __init__.py  cache.py  cli.py  config.py  elo.py  gdelt.py  models.py  scrape.py
pipeline/src/murrow/llm/: client.py  prompts.py
pipeline/src/murrow/stages/: aggregate.py  baseline.py  battles.py  collect.py  discover.py  fetch.py  metrics.py  publish.py
pipeline/tests/: test_aggregate.py  test_battles.py  test_cache.py  test_collect.py  test_discover.py  test_elo.py  test_fetch.py  test_llm_client.py  test_metrics.py  test_models.py  test_publish.py
site/: README.md  package-lock.json  package.json
site/src/pages/: index.astro
site/src/styles/: global.css
